--- a/css/style.css
+++ b/css/style.css
@@ -2,20 +2,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');
 
 /* ----- Media ----- */
-@media only screen and (max-width: 768px) {
-	#wrap {
-		margin: 2em 5%;
-	}
-	.card-ph img {
-		max-height: 180px;
-	}
-}
-@media only screen and (min-width: 768px) {
+/* @media only screen and (max-width: 768px) */
+
+@media only screen and (orientation: landscape) {
 	#wrap {
 		margin: 2em 15%;
 	}
 	.card-ph img {
 		max-height: 300px;
+	}
+}
+@media only screen and (orientation: portrait) {
+	#wrap {
+		margin: 2em 5%;
+	}
+	.card-ph img {
+		max-height: 180px;
 	}
 }
 
@@ -43,10 +45,6 @@ header, nav, footer, section {
 	justify-content: center;
 }
 
-html {
-	/* scroll-behavior: smooth; */
-}
-
 /* -----  ----- */
 header {
 	display: flex;
@@ -56,6 +54,8 @@ header {
 	width: 100%;
 	padding: 1em 8em;
 	background: var(--color-hf);
+	
+	font-weight: bold;
 }
 nav {
 	display: flex;
@@ -84,6 +84,7 @@ nav a:hover {
 footer {
 	padding: 3em;
 	background: var(--color-hf);
+	font-weight: bold;
 }
 #title {
 	margin: 1em 0;
@@ -112,7 +113,7 @@ footer {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	margin: 0 0 1em 0;
+	margin: 0 0 2em 0;
 }
 .card-txt {
 	padding: 0 2em;
@@ -146,34 +147,7 @@ footer {
 	color: white;
 	/* font: bold 24px/45px "Gill Sans MT", sans-serif; */
 }
-/*
-.card-ph {
-	position: relative;
-	padding: 0;
-	margin: 1em 0.3em;
-	border-radius: 1em;
-	transition: 0.3s;
-	row-gap: 1em;
-	column-gap: 1em;
+.card-txt h2 {
+	text-align: left;
+	margin: 0 0 0.3em 0;
 }
-.ph-card img {
-	flex-shrink: 2;
-	max-height: 300px;
-	height: auto;
-	border-radius: 1em;
-	box-shadow: 10px 20px rgba(0, 0, 0, .5);
-}
-.ph-card h2 {
-	position: absolute;
-	border-radius: 0.3em;
-	bottom: 0.6em;
-	left: 0.6em;
-	color: white;
-	font: bold 24px/45px "Helvetica", "Arial", sans-serif;
-	background: rgba(0, 0, 0, 0.7);
-	padding: 0 0.5em;
-}
-.ph-card:hover {
-	transform: translate(-10px, -10px);
-}
-*/
