Mobile view fix

--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,13 @@
 	#wrap {
 		margin: 2em 15%;
 	}
-	.card-ph img {
-		max-height: 300px;
-	}
 }
 @media only screen and (orientation: portrait) {
 	#wrap {
 		margin: 2em 5%;
 	}
-	.card-ph img {
-		max-height: 180px;
+	.card {
+		flex-direction: column;
 	}
 }
 
@@ -129,6 +126,7 @@ footer {
 .card-ph img {
 	/* max-height: 300px; */
 	height: auto;
+	max-height: 300px;
 	border-radius: 1em;
 	box-shadow: 5px 10px rgba(0, 0, 0, 0.7);
 }
