--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,18 @@
 	#wrap {
 		margin: 2em 15%;
 	}
+	.card {
+		flex-direction: row;
+	}
+	.card h2 {
+		text-align: left;
+	}
+	#even {
+		flex-direction: row-reverse;
+	}
+	#even h2 {
+		text-align: right;
+	}
 }
 @media only screen and (orientation: portrait) {
 	#wrap {
@@ -15,6 +27,16 @@
 	}
 	.card {
 		flex-direction: column;
+	}
+	.card h2 {
+		text-align: center;
+	}
+	.card-ph {
+		margin: 0 0 2em 0;
+	}
+	.card-ph img {
+		max-height: 100%;
+		max-width: 100%;
 	}
 }
 
@@ -124,8 +146,6 @@ footer {
 	transform: translate(-5px, -5px);
 }
 .card-ph img {
-	/* max-height: 300px; */
-	height: auto;
 	max-height: 300px;
 	border-radius: 1em;
 	box-shadow: 5px 10px rgba(0, 0, 0, 0.7);
